--- a/Cientes/UsuárioConta2.csproj
+++ b/Cientes/UsuárioConta2.csproj
@@ -3,9 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Poo_byteBank</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Poo-byteBank\Poo-byteBank.csproj" />
+  </ItemGroup>
 
 </Project>
